# StockOracle

./: .gitignore  README.md  package-lock.json  package.json  proxy.ts  pyproject.toml  requirements-local.txt  requirements.txt  streamlit_app.py  vercel.json
.github/workflows/: autopilot-scheduler.yml
api/: health.py  index.py  rank.py
api/autopilot/: close.py  run.py  status.py
app/: globals.css  layout.tsx  page.tsx
app/api/auth/login/: route.ts
app/api/auth/logout/: route.ts
app/api/auth/session/: route.ts
app/api/predictions/: route.ts
app/api/trade/execute/: route.ts
app/api/trade/positions/: route.ts
app/api/universe/global-movers/: route.ts
app/components/: assistant-panel.tsx
lib/: auth.ts
src/stockoracle/: __init__.py  alternative_data.py  app.py  autopilot.py  backtest.py  config.py  data.py  execution.py  features.py  modeling.py  runtime.py  same_day.py  storage.py  universe.py  yahoo_api.py
src/stockoracle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
