[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockoracle"
version = "0.1.0"
description = "Short-term stock mover ranking app with market data, feature engineering, and ensemble models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=5.24",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "streamlit>=1.44",
    "yfinance>=0.2.54",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]